Swagger UI aplicado

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,35 +2,22 @@ spring.application.name=tareaJava
 
 ## DATASOURCE
 
-spring.datasource.url=jdbc:h2:file:./data/coderHouse
-
+spring.datasource.url=jdbc:h2:file:./data/clientdb;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
-
 spring.datasource.username=sa
-
 spring.datasource.password=
-
-
-## SQL
-
-spring.sql.init.mode=never
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 
 ## JPA
-
-spring.jpa.properties.hibernate.current_session_context_class=thread
-
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
-
-spring.jpa.hibernate.ddl-auto=create-drop
-
-spring.jpa.show-sql=false
-
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 
 ## H2
-
 spring.h2.console.enabled=true
-
 spring.h2.console.path=/h2-console
+
+
+# swagger-ui custom path
+springdoc.swagger-ui.path=/swagger-ui.html
